<resources>
    <string name="app_name">RUAZOSA Mrezni kviz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="to_quiz_app_n_where_you_can_play_n_quiz_with_other_players">to Quiz App\n where you can play\n quiz with other players</string>
    <string name="next">Next</string>
    <string name="welcome">WELCOME</string>
    <string name="questions">QUESTIONS</string>
    <string name="play_by_answering_to_questions">play by answering to questions</string>
    <string name="back">Back</string>
    <string name="compete">COMPETE</string>
    <string name="with_other_people_n_or_friends_and_win">with other people\n or friends and win</string>
    <string name="quiz_app">QUIZ APP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="or_use_other_methods">Or use other methods</string>
    <string name="have_an_account">Have an account?</string>
    <string name="register_new_account">Register new account</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="by_clicking_register_you_agree_to_tos">By clicking Register you agree to ToS</string>
    <string name="register">Register</string>
    <string name="start_game">START GAME</string>
    <string name="invite_other_players">INVITE OTHER PLAYERS</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play">Play!</string>
    <string name="invite">Invite</string>
    <string name="your_answer">Your answer</string>
    <string name="end">End</string>
    <string name="final_scoreboard">Final Scoreboard</string>
    <string name="continue_started_games">Continue started games</string>
    <string name="follow_recommendations">Follow recommendations</string>
</resources>