<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="hr.fer.ruazosa.kviz2022.account.LoginFragmentViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/have_an_account"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="32sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LoginEmail"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:text="@={loginViewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LoginPassword"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text="@={loginViewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/TextError"
                android:text="@{loginViewModel.errors}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FF6A6A"
                tools:text="ERROR!!!" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="@{() -> loginViewModel.loginUser()}"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/RegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> loginViewModel.navigateToRegistration()}"
                android:text="@string/new_user_register_now"
                android:textColor="@color/md_theme_dark_error"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/md_theme_dark_outline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/or_use_other_methods"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/md_theme_dark_outline" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>